# tts-media-server

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  application.example.toml  compose.yaml  compose.yml  pyproject.toml
.github/workflows/: package-image.yml
engines/kokoro_82m/: Dockerfile  pyproject.toml  server.py
engines/melotts_zh/: Dockerfile  pyproject.toml  server.py
plugins/: kokoro_82m.py  melotts_zh.py  voicevox.py
src/: main.py
src/routers/: plugins.py  sessions.py  status.py
src/utils/: config.py  engine_client.py  enums.py  exceptions.py  logger.py  models.py  plugins.py
src/utils/discord/: backend.py  client.py  connection.py  dummybackend.py  http.py
src/utils/session/: manager.py  protocol.py  voice.py
tests/: gen_random_text.py  manual_discord_bot.py  test_config.py  test_discord_backend.py  test_engine_servers.py  test_logger.py  test_manual_discord_bot.py  test_plugins.py  test_routes.py  test_session.py  test_session_protocol.py
yomogi-onnx/: .gitignore  KANALIZER_NOTICE.md  README.md  THIRD_PARTY_NOTICES.md  benchmark.py  benchmark_hybrid.py  compare_outputs.py  export_onnx.py  pyproject.toml  quantize_onnx.py  reference_model.py
yomogi-onnx/logs/: source_files.jsonl
yomogi-onnx/reports/: benchmark.json  benchmark.md  equivalence_fp32.json  equivalence_int8.json  equivalence_int8_failures.jsonl  hybrid_benchmark.json  hybrid_benchmark.md  quantization.json  runtime_only_smoke.json
yomogi-onnx/tests/: ambiguous_sentences.txt  test_equivalence.py  test_fusion.py  test_kana.py  test_normalize.py  test_preprocess.py  test_unknown_segments.py
yomogi-onnx/yomogi_onnx/: __init__.py  __main__.py  dictionary.py  fusion.py  kana.py  normalize.py  preprocess.py  runtime.py  shared.py  types.py
