[project]
name = "tts-media-server"
version = "0.1.0"
description = "TTS plugin and Discord voice playback API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.14.1,<4",
    "discord-py[voice]>=2.7.1,<2.8",
    "fastapi>=0.139.2",
    "psutil>=7.2.2,<8",
    "uvicorn>=0.51.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
kokoro-82m = [
    "kokoro @ git+https://github.com/hexgrad/kokoro.git@dfb907a02bba8152ca444717ca5d78747ccb4bec",
    "misaki[ja,zh]>=0.9.4",
    "soundfile>=0.13.1",
]
melotts-zh = [
    "melotts @ git+https://github.com/myshell-ai/MeloTTS.git@209145371cff8fc3bd60d7be902ea69cbdb7965a",
]
