[project]
name = "yomogi-onnx"
version = "0.1.0"
description = "ONNX Runtime inference for Yomogi v1.4 Japanese readings"
readme = "README.md"
license = "MIT"
license-files = [
    "LICENSE",
    "KANALIZER_LICENSE",
    "KANALIZER_NOTICE.md",
    "THIRD_PARTY_NOTICES.md",
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "kanalizer==0.1.1",
    "numpy>=1.26,<3",
    "onnxruntime>=1.20,<2",
]

[project.optional-dependencies]
export = [
    "onnx>=1.17,<2",
    "onnxscript>=0.2",
    "torch>=2.6",
]
dev = [
    "psutil>=6,<8",
    "pytest>=8,<10",
]

[project.scripts]
yomogi-onnx = "yomogi_onnx.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
