[project]
name = "melotts-zh-engine"
version = "0.1.0"
description = "Isolated MeloTTS Chinese HTTP engine"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi>=0.115,<0.116",
    "melotts @ git+https://github.com/myshell-ai/MeloTTS.git@209145371cff8fc3bd60d7be902ea69cbdb7965a",
    "uvicorn[standard]>=0.34,<0.35",
]

[tool.uv]
package = false
